<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokemon">pokemon</string>
    <string name="numero">N001</string>
    <string name="nombrePokemon">Pokemon</string>
    <string name="tipo">Type</string>
    <string name="habilidadPrimariaTxt">Ability:</string>
    <string name="habilidadOcultaTxt">Hidden Ability:</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
