<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/detalle"

    tools:context="com.proyecto.alejandreyes.pokedex.Activity.DetaillPokemon">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imagenPokemonNormal"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ImageView
        android:id="@+id/imagenPokemonShiny"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintTop_toBottomOf="@id/imagenPokemonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imagenPokemonNormal"
        app:layout_constraintStart_toStartOf="@id/imagenPokemonNormal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:text="Normal"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintVertical_bias="0.5"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/georgiabolditalicfont"
        app:layout_constraintTop_toBottomOf="@id/imagenPokemonNormal"
        app:layout_constraintStart_toStartOf="@id/imagenPokemonNormal"
        app:layout_constraintEnd_toEndOf="@id/imagenPokemonNormal"
        app:layout_constraintBottom_toTopOf="@id/imagenPokemonShiny"
        android:textAllCaps="true"
        />
    <TextView
        android:id="@+id/txtShyny"
        android:layout_width="wrap_content"
        android:text="shiny"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/georgiabolditalicfont"
        app:layout_constraintTop_toBottomOf="@id/imagenPokemonShiny"
        app:layout_constraintStart_toStartOf="@id/imagenPokemonShiny"
        app:layout_constraintEnd_toEndOf="@id/imagenPokemonShiny"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="true"
        />

    <TextView
        android:id="@+id/nombrePokemonDetalles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombrePokemon"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagenPokemonNormal"
        app:layout_constraintTop_toTopOf="@id/imagenPokemonNormal"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/numeroPokemonDetalles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/georgiabolditalicfont"
        android:text="@string/numero"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nombrePokemonDetalles"
        app:layout_constraintStart_toStartOf="@id/nombrePokemonDetalles"
        app:layout_constraintTop_toBottomOf="@id/nombrePokemonDetalles"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tipoPokemonDetalles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/nombrePokemonDetalles"
        app:layout_constraintStart_toStartOf="@id/nombrePokemonDetalles"
        app:layout_constraintTop_toBottomOf="@id/numeroPokemonDetalles"
        app:layout_constraintVertical_bias="0.05" />
    <LinearLayout
        android:id="@+id/tiposLayout"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/tipoPokemonDetalles"
        app:layout_constraintStart_toStartOf="@id/nombrePokemonDetalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/tipoDetalles1"
            android:src="@drawable/dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/tipoDetalles2"
            android:layout_marginLeft="18dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/habilidadPrimaria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/habilidadPrimariaTxt"
        app:layout_constraintBottom_toTopOf="@id/habilidadSecundaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/nombrePokemonDetalles"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tiposLayout"
        app:layout_constraintVertical_bias="0.120000005" />
    <TextView
        android:id="@+id/habilidadSecundaria"
        android:layout_width="0dp"

        android:text="@string/habilidadPrimariaTxt"

        app:layout_constraintTop_toBottomOf="@id/habilidadPrimaria"
        app:layout_constraintStart_toStartOf="@id/nombrePokemonDetalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/habilidadOculta"
        android:textAllCaps="true"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/habilidadOculta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/habilidadOcultaTxt"
        app:layout_constraintBottom_toBottomOf="@id/txtShyny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/nombrePokemonDetalles"
        app:layout_constraintTop_toBottomOf="@id/habilidadSecundaria"
        android:textAllCaps="true"/>
</android.support.constraint.ConstraintLayout>
